Remove redundant CSS - hide overflow on container to prevent scrolling horizontally

--- a/src/app/slider/slider.component.scss
+++ b/src/app/slider/slider.component.scss
@@ -1,13 +1,13 @@
 .container {
     display: flex;
     justify-content: center;
+    overflow: hidden;
 }
 
 .slider {
     display: flex;
     flex-grow: 1;
     margin: 0 .5rem;
-    transform: translateX(calc(-100% * var(--slider-index, 0)));
     transition: transform 0.5s ease-in-out;
 }
 
@@ -21,7 +21,6 @@
 .handle {
     border: none;
     border-radius: 1rem;
-    flex-grow: 0;
     background-color: rgba(0, 0, 0, 0.25);
     z-index: 10;
     margin: 0.5rem 0;
@@ -51,10 +50,6 @@
 
 .handle::after {
     color: white;
-}
-
-.hide-right-handle {
-    display: none;
 }
 
 h1 {
