--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-:root {
-    --slider-index: 0;
-}
 
 *, *::after, *::before {
     box-sizing: border-box;
